Added base CSS styles to the current html

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,63 @@
+/* General Styles */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
+
+/* Main Container */
+#main {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+}
+
+/* Title Styles */
+#title {
+  text-align: center;
+  color: #333;
+  margin-bottom: 30px;
+}
+
+/* Image Division Styles */
+#img-div {
+  text-align: center; 
+  margin-bottom: 30px;
+}
+
+/* Image Styles */
+#image {
+  max-width: 100%; 
+  height: auto;     
+}
+
+/* Image Caption Styles */
+#img-caption {
+  margin-top: 10px;
+  font-style: italic;
+  color: #666;
+}
+
+/* Tribute Information Styles */
+#tribute-info {
+  line-height: 1.6;
+  color: #333;
+  text-align: justify;
+}
+
+/* Tribute Link Styles */
+#tribute-link {
+  display: block;
+  text-align: center;
+  margin-top: 40px;
+  font-size: 1.1em;
+  color: #0066cc;
+  text-decoration: none;
+}
+
+#tribute-link:hover {
+  text-decoration: underline;
+}
 
